--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">NewOrderActivity</string>
     <string name="mainBtnOrder">주문하기</string>
     <string name="mainTextViewTitle">주문관리</string>
+    <string name="mainTextViewTable1">테이블 1</string>
+    <string name="textViewmenu1">아메리카노</string>
 </resources>
